List dining halls on stats webpage with links

--- a/webpage/public/index.html
+++ b/webpage/public/index.html
@@ -36,6 +36,7 @@
         <div class="row"><div>
             <h2>Dining Halls:</h2>
             <p>These are the dining halls that Chef Wildcat supports.</p>
+            <ul id="diningHallsList"></ul>
             <!-- todo -->
         </div></div>
 
@@ -57,7 +58,7 @@
             <!-- todo -->
         </div></div>
 
-        
+
 
     </div>
 
