List some stats on the bot-stats page

--- a/webpage/public/index.html
+++ b/webpage/public/index.html
@@ -42,23 +42,20 @@
         <div class="row"><div>
             <h2>Servers:</h2>
             <p>These are the servers that Chef Wildcat is in.</p>
-            <!-- todo -->
+            <ul id="serversList"></ul>
         </div></div>
 
         <div class="row"><div>
             <h2>Channels:</h2>
             <p>These are the channels that Chef Wildcat is in.</p>
-            <!-- todo -->
+            <ul id="channelsList"></ul>
         </div></div>
 
         <div class="row"><div>
             <h2>Users:</h2>
-            <p>These are the users that Chef Wildcat has talked to.</p>
-            <!-- todo -->
+            <p>These are the users that Chef Wildcat has talked to directly.</p>
+            <ul id="usersList"></ul>
         </div></div>
-
-
-
     </div>
 
     <script src="./scripts/fetch.js"></script>
